--- a/MonthView/src/main/AndroidManifest.xml
+++ b/MonthView/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="work.nich.calendarview">
+    package="work.nich.view">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
