--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile ('com.android.support:support-core-ui:25.3.1')
-    compile project(':CalenderView')
+    compile project(':MonthView')
 }
